--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
+    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- google APIs -->
@@ -20,13 +20,13 @@
     <div class="container-fluid pr-1">
         <div class="row pt-lg-5">
             <div class="col-12 col-sm-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
-                <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyaansh: A crowdsourcing initiative for Indic
+                <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyansh: A crowdsourcing initiative for Indic
                     languages
                 </h1>
                 <p class="h4 font-weight-light lh-7 site-blue text-justify mt-5">For the development of a speech
                     recognition product that focuses solely on Indian languages,
                     there is a need for an enormous repository of diversified Indian voices. Through
-                    Vakyaansh, we are reaching out to you to contribute your voices to create a diverse open source
+                    Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source
                     repository of Indian voices to this end.<a class="ml-1" href="/about-us"> Know More</a></p>
                 <div class="row mt-4">
                     <div class="col-8 col-lg-5">
@@ -37,7 +37,10 @@
                     </div>
                 </div>
                 <div class="row mt-4" id="speaker-data">
-                    <div class="col-4 col-lg-3 text-center" id="loader">
+                    <div class="col-6 col-lg-4 text-left" id="loader1">
+                        <div><span class="spinner"></span></div>
+                    </div>
+                    <div class="col-6 col-lg-4 text-left" id="loader2">
                         <div><span class="spinner"></span></div>
                     </div>
                     <div class="col-6 col-lg-4 text-left d-none" id="speakers-wrapper">
@@ -83,7 +86,7 @@
         <div class="row justify-content-center">
             <div class="col-xl-4 col-md-6 col-sm-8 col-11 p-5 card" id="speaker-details">
                 <p class="display-5 font-wt-900 site-blue text-center">Speaker Details</h1>
-                    <p class="text-muted text-center">All the fields are optional but you can enrich your dataset contribution 
+                    <p class="text-muted text-center">All the fields are optional but you can enrich your dataset contribution
                         by providing the demographic details.</p>
                     <div class="form-group mt-5">
                         <label for="username" class="form-label">User Name</label>
