--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
+    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"
@@ -24,16 +24,16 @@
             </div>
         </div>
         <div class="row justify-content-center bg-primary" id="nav-row">
-            <div class="col-md-8 col-sm-10 p-5 text-light text-center">
-                <a href="#terms-of-use" class="text-white h5 p-3 badge-pill border mx-2">Terms of Use</a>
-                <a href="#privacy-policy" class="text-white h5 p-3 badge-pill border mx-2">Privacy Policy</a>
-                <a href="#copyright" class="text-white h5 p-3 badge-pill border mx-2">Copyright & Licensing Notice</a>
+            <div class="col-md-8 col-sm-10 p-4-5 text-light text-center">
+                <a href="#terms-of-use" class="text-white h6 p-3 badge-pill border mx-3">Terms of Use</a>
+                <a href="#privacy-policy" class="text-white h6 p-3 badge-pill border mx-3">Privacy Policy</a>
+                <a href="#copyright" class="text-white h6 p-3 badge-pill border mx-3">Copyright & Licensing Notice</a>
             </div>
         </div>
     </div>
 
     <div class="container-fluid p-5">
-        <div class="text-center my-5 pt-5" id="terms-of-use">
+        <div class="text-center my-5 pt-6" id="terms-of-use">
             <h1 class="display-5 font-wt-900">Terms of Use</h1>
         </div>
         <div class="row justify-content-center">
@@ -196,13 +196,13 @@
             </div>
         </div>
 
-        <div class="text-center my-5 pt-5" id="privacy-policy">
+        <div class="text-center my-5 pt-6" id="privacy-policy">
             <h1 class="display-5 font-wt-900">Privacy Policy</h1>
         </div>
         <div class="row justify-content-center">
             <div class="col-10 col-lg-6 text-left">
 
-                Effective Date: ___________
+                Effective Date: 1st June, 2020
                 </br></br>
                 We respect your privacy and are committed to protecting the privacy of our
                 Users.
@@ -383,8 +383,8 @@
             </div>
         </div>
 
-        <div class="text-center my-5 pt-5">
-            <h1 class="display-5 font-wt-900" id="copyright">Copyright & Licensing Notice</h1>
+        <div class="text-center my-5 pt-6" id="copyright">
+            <h1 class="display-5 font-wt-900">Copyright & Licensing Notice</h1>
         </div>
 
         <div class="row justify-content-center mb-5 pb-6">
