--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
+    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- google APIs -->
@@ -43,10 +43,10 @@
         <div class="row justify-content-center mt-5">
             <div class="col-xl-6 col-lg-8 col-10 text-center lead">
                 <p>
-                    Vakyaansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.
+                    Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.
                 </p>
                 <p>
-                    A contribution of 30-45 mins voice per speaker can make Vakyaansh come closer to it’s vision.
+                    A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.
                 </p>
                 <p>
                     <b>We know you can do more!</b>
@@ -73,16 +73,16 @@
         <div class="text-primary mt-5 text-center">Share it with your friends and family</div>
         <div class="row justify-content-center mt-2 bg-white">
             <div class="col-lg-3 col-sm-5 col-12 text-center">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//codmento.com/">
-                    <img src="/img/fb-icon.svg" width="8%" alt="Facebook">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//vakyansh.in/">
+                    <img src="/img/fb-icon.svg" width="8%" alt="Share on Facebook">
                 </a>
                 <span>&sdot;</span>
-                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//codmento.com/&title=Vakyansh" >
-                    <img src="/img/linkedin-icon.svg" width="8%" alt="LinkedIn">
+                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//vakyansh.in/&title=Vakyansh%3A%20A%20crowdsourcing%20initiative%20for%20Indic%20languages&summary=&source=" >
+                    <img src="/img/linkedin-icon.svg" width="8%" alt="Share on LinkedIn">
                 </a>
                 <span>&sdot;</span>
-                <a href="https://twitter.com/intent/tweet?text=Hey%20checkout%20this%20this%20https%3A//codmento.com/" >
-                    <img src="/img/twitter-icon.svg" width="8%" alt="Twitter">
+                <a href="https://twitter.com/intent/tweet?text=I%20contributed%20my%20voice%20on%20https%3A//vakyansh.in/%0APlease%20contribute%20your%20voice%20and%20help%20in%20this%20initiative" >
+                    <img src="/img/twitter-icon.svg" width="8%" alt="Share on Twitter">
                 </a>
             </div>
         </div>
