--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,51 +6,51 @@ html {
 }
 
 html {
-  font-size: 6px;
+  font-size: 8px;
 }
 @media (min-width: 321px) {
-  html {
-    font-size: 8px;
-  }
-}
-@media (min-width: 448px) {
   html {
     font-size: 9px;
   }
 }
-@media (min-width: 576px) {
+@media (min-width: 448px) {
   html {
     font-size: 10px;
   }
 }
-@media (min-width: 672px) {
+@media (min-width: 576px) {
   html {
     font-size: 11px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 672px) {
   html {
     font-size: 12px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   html {
     font-size: 13px;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   html {
     font-size: 14px;
   }
 }
-@media (min-width: 1300px) {
+@media (min-width: 1200px) {
   html {
     font-size: 15px;
   }
 }
-@media (min-width: 1400px) {
+@media (min-width: 1300px) {
   html {
     font-size: 16px;
+  }
+}
+@media (min-width: 1400px) {
+  html {
+    font-size: 17px;
   }
 }
 
@@ -77,6 +77,9 @@ h6,
 }
 .pt-6 {
   padding-top: 6rem;
+}
+.p-4-5{
+padding: 2rem;
 }
 .mb-6 {
   margin-bottom: 6rem;
@@ -118,7 +121,7 @@ h6,
   pointer-events: none;
 }
 .outline-0 {
-  outline: 0;
+outline: 0;
 }
 .form-control.is-invalid {
   background-image: none;
