--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
+    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"
@@ -18,13 +18,13 @@
     <div class="container-fluid pr-1">
         <div class="row pt-lg-5">
             <div class="col-12 col-sm-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
-                <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyaansh: A crowdsourcing initiative for Indic
+                <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyansh: A crowdsourcing initiative for Indic
                     languages
                 </h1>
                 <p class="h4 font-weight-light lh-7 site-blue text-justify mt-5">
                     For the development of a speech recognition product that focuses solely on Indian languages,
                     there is a need for an enormous repository of diversified Indian voices. Through
-                    Vakyaansh, we are reaching out to you to contribute your voices to create a diverse open source
+                    Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source
                     repository of Indian voices to this end.
                 </p>
             </div>
@@ -80,7 +80,7 @@
                     </br>
                     </br>
                     The product proposed to be developed by EkStep will rely on open source contributions through
-                    Vakyaansh.</p>
+                    Vakyansh.</p>
             </div>
         </div>
     </div>
@@ -93,7 +93,7 @@
                 </p>
                 <p class="lead lh-7 mt-5">Speech recognition relies on "machine-learning" technology that requires huge
                     collections of datasets that includes diversified Indian voices and the corresponding text. Through
-                    Vakyaansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian
+                    Vakyansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian
                     language which can be used for this initiative and others. The initial plan is to begin
                     with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach
                     approximately 10,000 hrs of dataset for Hindi language at the earliest.
