--- a/views/not-found.ejs
+++ b/views/not-found.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
+    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
