--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
+    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
