changed domain name in t&c page

--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -39,7 +39,7 @@
         <div class="row justify-content-center">
             <div class="col-10 col-lg-6 text-left">
                 <p>
-                    This website <a href="/">Codmento.com</a> (<b>"Website"</b>) is developed and maintained by EkStep
+                    This website <a href="/">vakyansh.in</a> (<b>"Website"</b>) is developed and maintained by EkStep
                     Foundation (<b>“EkStep”</b>). EkStep is a not-for-profit company registered under the Indian
                     Companies Act 2013, having its office at No. 85, 7th Cross, Koramangala 4th Block, Bangalore 560034.
                     The Website has been developed to invite people of Indian origin from different parts of the world,
