Added home page charts

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -108,8 +108,7 @@
                     us off.
                     </br>
                     </br>
-                    Every minute of your contribution will make a huge difference and bring us closer to our objective. 
-                </p>
+                    Every minute of your contribution will make a huge difference and bring us closer to our objective.</p>
                 <div class="row">
                     <div class="col-8 col-lg-5">
                         <a role="button" href="/record" class="btn bg-white shadow text-primary h6 w-100 rounded mt-3 p-3">
