--- a/public/css/home.css
+++ b/public/css/home.css
@@ -126,7 +126,22 @@ outline: 0;
 .form-control.is-invalid {
   background-image: none;
 }
-
+#chart-row .chart{
+  height: 40rem;
+}
+[data-toggle="popover"]::after {
+  display: inline-block;
+  margin-left: .255em;
+  vertical-align: middle;
+  content: "";
+  border-top: .3em solid;
+  border-right: .3em solid transparent;
+  border-bottom: 0;
+  border-left: .3em solid transparent;
+}
+.popover-body .table-sm td{
+  padding: .1rem .5rem;
+}
 .spinner {
   width: 3rem;
   height: 3rem;
