Chart changes: popover for extra info added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
                 <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyansh: A crowdsourcing initiative for Indic
                     languages
                 </h1>
-                <p class="h4 font-weight-light lh-7 site-blue text-justify mt-5">For the development of a speech
+                <p class="h5 font-weight-light lh-7 site-blue text-justify mt-5">For the development of a speech
                     recognition product that focuses solely on Indian languages,
                     there is a need for an enormous repository of diversified Indian voices. Through
                     Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source
@@ -78,15 +78,15 @@
             </div>
             <div class="col-12 col-lg-4 mb-3 text-center chart d-none p-4">
                 <div id="mother-tongue-chart" class="h-100 p-5"></div>
-                <span class="h3 badge-pill border-primary border p-3 text-primary" data-html="true" data-toggle="popover" data-placement="bottom" data-trigger='hover focus'>Mother Tongue</span>
+                <span class="h6 badge-pill border-primary border p-3 text-primary" data-html="true" data-container="body" data-toggle="popover" data-placement="bottom" data-trigger='manual'>Mother Tongue</span>
             </div>
             <div class="col-12 col-lg-4 mb-3 text-center chart d-none p-4">
                 <div id="age-group-chart" class="h-100 p-5"></div>
-                <span class="h3 badge-pill border-primary border p-3 text-primary" data-html="true" data-toggle="popover" data-placement="bottom" data-trigger='hover focus'>Age Group</span>
+                <span class="h6 badge-pill border-primary border p-3 text-primary" data-html="true" data-container="body" data-toggle="popover" data-placement="bottom" data-trigger='manual'>Age Group</span>
             </div>
             <div class="col-12 col-lg-4 mb-3 text-center chart d-none p-4">
                 <div id="gender-chart" class="h-100 p-5"></div>
-                <span class="h3 badge-pill border-primary border p-3 text-primary" data-html="true" data-toggle="popover" data-placement="bottom" data-trigger='hover focus'>Gender</span>
+                <span class="h6 badge-pill border-primary border p-3 text-primary" data-html="true" data-container="body" data-toggle="popover" data-placement="bottom" data-trigger='manual'>Gender</span>
             </div>
         </div>
     </div>
