--- a/public/css/home.css
+++ b/public/css/home.css
@@ -140,7 +140,10 @@ outline: 0;
   border-left: .3em solid transparent;
 }
 .popover-body .table-sm td{
-  padding: .1rem .5rem;
+  padding: 0 .5rem;
+}
+.popover-body{
+  overflow-y: auto;
 }
 .spinner {
   width: 3rem;
