changes in chart data, t&c page

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -36,11 +36,11 @@
 
     <div class="container-fluid bg-blue mt-n6 pb-6 pt-6">
         <div class="row justify-content-center text-white pt-5 pb-5">
-            <aside class="col-8 col-lg-4 text-left pr-4 pl-0 mb-2">
+            <div class="col-8 col-lg-4 text-left pr-4 pl-0 mb-2">
                 <p class="h1 font-wt-900 lh-5">
                     Our multilingual DNA is still a missing piece in digital first strategy
                 </p>
-            </aside>
+            </div>
             <div class="col-8 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2">
                 <section class="lead">India being a vast multilingual country, 90% of India’s population relies on
                     regional languages to
