--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -156,17 +156,6 @@
                     consequential or exemplary damages, direct or indirect damages for loss of goodwill, work stoppage,
                     lost profits, loss of data or computer malfunction. You agree to indemnify and hold EkStep harmless
                     for any liability or claim that comes as a result of contributing Voice Recordings.
-
-                    Voice Recordings, you agree that EkStep will not be liable in any way for any inability to use the
-                    Website, or for any claim arising out of these Terms. EkStep specifically disclaims the following:
-                    indirect, special, incidental, consequential or exemplary damages, direct or indirect damages for
-                    loss
-                    of goodwill, work stoppage, lost profits, loss of data or computer malfunction. You agree to
-                    indemnify
-                    and hold EkStep harmless for any liability or claim that comes as a result of contributing Voice
-                    Recordings. The Website is available on an “As-Is” basis and there are no warranties or legal
-                    guarantees
-                    of any kind such as “merchantability”, “fitness for a particular purpose”, “non- infringement”.
                 </div>
 
                 </br></br>
@@ -189,7 +178,7 @@
                 </br></br>
 
                 <b>8. Governing Law: </b>
-                <div class="ml-1">T These Terms shall be governed by and construed in accordance with the Indian law.
+                <div class="ml-1">These Terms shall be governed by and construed in accordance with the Indian law.
                     Any dispute arising under these Terms shall be subject to the exclusive jurisdiction of the courts
                     of Bangalore, India.
                 </div>
@@ -235,7 +224,7 @@
                 </br></br>
                 <div class="ml-2">
                     <div class="ml-1">
-                        <b>Voice Recordings: </b>
+                        <b>a. Voice Recordings: </b>
                         Users may choose to contribute Voice Recordings on the Website. Voice recordings are used for
                         the Purpose, including to develop speech-to-text technology and tools. Voice Recordings, along
                         with any optionally provided demographic metadata such as age group, gender and mother tongue,
@@ -248,7 +237,7 @@
                     </br>
                     </br>
                     <div class="ml-1">
-                        <b>Personal meta data and information: </b>
+                        <b>b. Personal meta data and information: </b>
                         The Website does not mandate a User to provide any personal information or sensitive personal
                         data or information. You do not need to create an account to use the Website or contribute Voice
                         Recordings. You may choose to provide a username, which together with cookie will only be used
@@ -258,7 +247,7 @@
                     </br>
                     </br>
                     <div class="ml-1">
-                        <b>Demographic meta data:</b>
+                        <b>c. Demographic meta data:</b>
                         You can optionally provide information such as your gender, age group, and mother tongue. This
                         will help EkStep and other researchers to understand the demographic distribution of the
                         speakers in the dataset repository and to improve and create speech-to-text technology and
@@ -269,43 +258,17 @@
                     </br>
                     </br>
                     <div class="ml-1">
-                        <b>Interaction data:</b>
+                        <b>d. Interaction data:</b>
                         We may use cookies to track de-identified information such as identifying the uniqueness of
                         anonymous Users who contribute Voice Recordings, the number of Voice Recordings you record,
                         interactions with buttons and menus, and session length. The cookie will be stored by the
                         Website to identify anonymous users uniquely and hence, to provide you a personalized experience
                         when you re-visit the Website. It can also be used to identify a unique speaker in some cases to
                         their voices for a pure aggregated demographic view of all the consumers who have contributed to
-                        the dataset.You can delete the cookie anytime as per your discretion. </div>
+                        the dataset. You can delete the cookie anytime as per your discretion. </div>
                     </br>
                     </br>
-
-
-                    <div class="ml-1">
-                        <b>Technical data:</b>
-                        We use Google Analytics to better understand how you interact with the Website. For
-                        example, we may use
-                        cookies to track de-identified information such as the number of Voice Recordings you record or
-                        listen to,
-                        interactions with buttons and menus, and session length. We also collect the URL and title of
-                        the
-                        Website
-                        pages you visit. To consistently improve the Website experience, we collect information about
-                        browser type
-                        and version, viewport size, and screen resolution. This allows us to understand how people
-                        interact
-                        with
-                        Website so we can improve it. We also collect your location, and the language setting in your
-                        browser to
-                        make sure it looks right for you. If you’d prefer to opt out of Google Analytics data
-                        collection,
-                        you can
-                        install the Google Analytics Opt-out Browser Add-on, which stops data transmission to Google
-                        Analytics.</div>
                 </div>
-
-                </br>
-                </br>
 
                 <b>2. Storage of your data: </b>
                 <div class="ml-1">Your data will be stored in electronic form using cloud services, including Google
